update user & auth
